--- a/views/css/front.css
+++ b/views/css/front.css
@@ -1,4 +1,4 @@
-.dc-top {    clear: both; background: #f6f6f6;text-align: center;margin-top: 10px;padding: 10px 10px 20px 10px;border: 3px solid #e9e9e9;float: left;}
+.dc-to { }
 .dc-product { float:none;  border:0 none;}
 .dc-top span span {margin:0 5px;background:#404040; color:#fff; font: 600 16px/22px "Open Sans", sans-serif; padding:3px 5px; border-radius:5px; margin-right:5px;   position:relative; text-align:center;}
 .dc-top span span em {font-style:normal; position:absolute; top:100%; left:50%; color:#777; font-size:10px; font-weight:normal;
